crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-cayenne[file]-on_zero_results_small_clickbench_q8_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q8"
---
+---------------+--------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                   |
+---------------+--------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: count(*) DESC NULLS FIRST                                                                        |
|               |   Projection: hits.AdvEngineID, count(Int64(1)) AS count(*)                                            |
|               |     Aggregate: groupBy=[[hits.AdvEngineID]], aggr=[[count(Int64(1))]]                                  |
|               |       Filter: hits.AdvEngineID != Int16(0)                                                             |
|               |         TableScan: hits projection=[AdvEngineID], partial_filters=[hits.AdvEngineID != Int16(0)]       |
| physical_plan | SortPreservingMergeExec: [count(*)@1 DESC]                                                             |
|               |   ProjectionExec: expr=[AdvEngineID@0 as AdvEngineID, count(Int64(1))@1 as count(*)]                   |
|               |     SortExec: expr=[count(Int64(1))@1 DESC], preserve_partitioning=[true]                              |
|               |       AggregateExec: mode=FinalPartitioned, gby=[AdvEngineID@0 as AdvEngineID], aggr=[count(Int64(1))] |
|               |         RepartitionExec: partitioning=Hash([AdvEngineID@0], 16), input_partitions=16                   |
|               |           AggregateExec: mode=Partial, gby=[AdvEngineID@0 as AdvEngineID], aggr=[count(Int64(1))]      |
|               |             FilterExec: AdvEngineID@0 != 0                                                             |
|               |               RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                    |
|               |                 SchemaCastScanExec                                                                     |
|               |                   FallbackOnZeroResultsScanExec                                                        |
|               |                     CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                  |
|               |                       BytesProcessedExec                                                               |
|               |                         EmptyExec                                                                      |
|               |                                                                                                        |
+---------------+--------------------------------------------------------------------------------------------------------+
