crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-cayenne[file]-on_zero_results_small_clickbench_q9_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q9"
---
+---------------+-------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: u DESC NULLS FIRST, fetch=10                                                                          |
|               |   Projection: hits.RegionID, count(alias1) AS u                                                             |
|               |     Aggregate: groupBy=[[hits.RegionID]], aggr=[[count(alias1)]]                                            |
|               |       Aggregate: groupBy=[[hits.RegionID, hits.UserID AS alias1]], aggr=[[]]                                |
|               |         TableScan: hits projection=[RegionID, UserID]                                                       |
| physical_plan | SortPreservingMergeExec: [u@1 DESC], fetch=10                                                               |
|               |   ProjectionExec: expr=[RegionID@0 as RegionID, count(alias1)@1 as u]                                       |
|               |     SortExec: TopK(fetch=10), expr=[count(alias1)@1 DESC], preserve_partitioning=[true]                     |
|               |       AggregateExec: mode=FinalPartitioned, gby=[RegionID@0 as RegionID], aggr=[count(alias1)]              |
|               |         RepartitionExec: partitioning=Hash([RegionID@0], 16), input_partitions=16                           |
|               |           AggregateExec: mode=Partial, gby=[RegionID@0 as RegionID], aggr=[count(alias1)]                   |
|               |             AggregateExec: mode=FinalPartitioned, gby=[RegionID@0 as RegionID, alias1@1 as alias1], aggr=[] |
|               |               RepartitionExec: partitioning=Hash([RegionID@0, alias1@1], 16), input_partitions=16           |
|               |                 AggregateExec: mode=Partial, gby=[RegionID@0 as RegionID, UserID@1 as alias1], aggr=[]      |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                     |
|               |                     SchemaCastScanExec                                                                      |
|               |                       FallbackOnZeroResultsScanExec                                                         |
|               |                         CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                   |
|               |                           BytesProcessedExec                                                                |
|               |                             EmptyExec                                                                       |
|               |                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------+
