crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-cayenne[file]-on_zero_results_tpcds_q37_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpcds_q37"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                   |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: item.i_item_id ASC NULLS LAST, fetch=100                                                                                                                                                                                                                                                         |
|               |   Aggregate: groupBy=[[item.i_item_id, item.i_item_desc, item.i_current_price]], aggr=[[]]                                                                                                                                                                                                             |
|               |     Projection: item.i_item_id, item.i_item_desc, item.i_current_price                                                                                                                                                                                                                                 |
|               |       LeftSemi Join: item.i_item_sk = inventory.inv_item_sk                                                                                                                                                                                                                                            |
|               |         LeftSemi Join: item.i_item_sk = catalog_sales.cs_item_sk                                                                                                                                                                                                                                       |
|               |           Projection: item.i_item_sk, item.i_item_id, item.i_item_desc, item.i_current_price                                                                                                                                                                                                           |
|               |             Filter: item.i_current_price >= Decimal128(26.00,7,2) AND item.i_current_price <= Decimal128(56.00,7,2) AND item.i_manufact_id IN ([Int32(744), Int32(884), Int32(722), Int32(693)])                                                                                                       |
|               |               TableScan: item projection=[i_item_sk, i_item_id, i_item_desc, i_current_price, i_manufact_id], partial_filters=[item.i_current_price >= Decimal128(26.00,7,2), item.i_current_price <= Decimal128(56.00,7,2), item.i_manufact_id IN ([Int32(744), Int32(884), Int32(722), Int32(693)])] |
|               |           TableScan: catalog_sales projection=[cs_item_sk]                                                                                                                                                                                                                                             |
|               |         Projection: inventory.inv_item_sk                                                                                                                                                                                                                                                              |
|               |           LeftSemi Join: inventory.inv_date_sk = date_dim.d_date_sk                                                                                                                                                                                                                                    |
|               |             Projection: inventory.inv_date_sk, inventory.inv_item_sk                                                                                                                                                                                                                                   |
|               |               Filter: inventory.inv_quantity_on_hand >= Int32(100) AND inventory.inv_quantity_on_hand <= Int32(500)                                                                                                                                                                                    |
|               |                 TableScan: inventory projection=[inv_date_sk, inv_item_sk, inv_quantity_on_hand], partial_filters=[inventory.inv_quantity_on_hand >= Int32(100), inventory.inv_quantity_on_hand <= Int32(500)]                                                                                         |
|               |             Projection: date_dim.d_date_sk                                                                                                                                                                                                                                                             |
|               |               Filter: date_dim.d_date >= Date32("2001-06-09") AND date_dim.d_date <= Date32("2001-08-08")                                                                                                                                                                                              |
|               |                 TableScan: date_dim projection=[d_date_sk, d_date], partial_filters=[date_dim.d_date >= Date32("2001-06-09"), date_dim.d_date <= Date32("2001-08-08")]                                                                                                                                 |
| physical_plan | SortPreservingMergeExec: [i_item_id@0 ASC NULLS LAST], fetch=100                                                                                                                                                                                                                                       |
|               |   SortExec: TopK(fetch=100), expr=[i_item_id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                           |
|               |     AggregateExec: mode=FinalPartitioned, gby=[i_item_id@0 as i_item_id, i_item_desc@1 as i_item_desc, i_current_price@2 as i_current_price], aggr=[]                                                                                                                                                  |
|               |       RepartitionExec: partitioning=Hash([i_item_id@0, i_item_desc@1, i_current_price@2], 32), input_partitions=32                                                                                                                                                                                     |
|               |         AggregateExec: mode=Partial, gby=[i_item_id@0 as i_item_id, i_item_desc@1 as i_item_desc, i_current_price@2 as i_current_price], aggr=[]                                                                                                                                                       |
|               |           HashJoinExec: mode=Partitioned, join_type=LeftSemi, accumulator=MinMaxLeftAccumulator, on=[(i_item_sk@0, inv_item_sk@0)], projection=[i_item_id@1, i_item_desc@2, i_current_price@3]                                                                                                         |
|               |             HashJoinExec: mode=Partitioned, join_type=LeftSemi, accumulator=MinMaxLeftAccumulator, on=[(i_item_sk@0, cs_item_sk@0)]                                                                                                                                                                    |
|               |               RepartitionExec: partitioning=Hash([i_item_sk@0], 32), input_partitions=32                                                                                                                                                                                                               |
|               |                 FilterExec: i_current_price@3 >= 26.00 AND i_current_price@3 <= 56.00 AND i_manufact_id@4 IN (SET) ([744, 884, 722, 693]), projection=[i_item_sk@0, i_item_id@1, i_item_desc@2, i_current_price@3]                                                                                     |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                                                                |
|               |                     SchemaCastScanExec                                                                                                                                                                                                                                                                 |
|               |                       FallbackOnZeroResultsScanExec                                                                                                                                                                                                                                                    |
|               |                         CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                                                                                              |
|               |                           BytesProcessedExec                                                                                                                                                                                                                                                           |
|               |                             EmptyExec                                                                                                                                                                                                                                                                  |
|               |               RepartitionExec: partitioning=Hash([cs_item_sk@0], 32), input_partitions=1                                                                                                                                                                                                               |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                                                     |
|               |                   FallbackOnZeroResultsScanExec                                                                                                                                                                                                                                                        |
|               |                     CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                                                                                                  |
|               |                       BytesProcessedExec                                                                                                                                                                                                                                                               |
|               |                         EmptyExec                                                                                                                                                                                                                                                                      |
|               |             RepartitionExec: partitioning=Hash([inv_item_sk@0], 32), input_partitions=32                                                                                                                                                                                                               |
|               |               HashJoinExec: mode=Partitioned, join_type=LeftSemi, accumulator=MinMaxLeftAccumulator, on=[(inv_date_sk@0, d_date_sk@0)], projection=[inv_item_sk@1]                                                                                                                                     |
|               |                 RepartitionExec: partitioning=Hash([inv_date_sk@0], 32), input_partitions=32                                                                                                                                                                                                           |
|               |                   FilterExec: inv_quantity_on_hand@2 >= 100 AND inv_quantity_on_hand@2 <= 500, projection=[inv_date_sk@0, inv_item_sk@1]                                                                                                                                                               |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                                                              |
|               |                       SchemaCastScanExec                                                                                                                                                                                                                                                               |
|               |                         FallbackOnZeroResultsScanExec                                                                                                                                                                                                                                                  |
|               |                           CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                                                                                            |
|               |                             BytesProcessedExec                                                                                                                                                                                                                                                         |
|               |                               EmptyExec                                                                                                                                                                                                                                                                |
|               |                 RepartitionExec: partitioning=Hash([d_date_sk@0], 32), input_partitions=32                                                                                                                                                                                                             |
|               |                   FilterExec: d_date@1 >= 2001-06-09 AND d_date@1 <= 2001-08-08, projection=[d_date_sk@0]                                                                                                                                                                                              |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                                                              |
|               |                       SchemaCastScanExec                                                                                                                                                                                                                                                               |
|               |                         FallbackOnZeroResultsScanExec                                                                                                                                                                                                                                                  |
|               |                           CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                                                                                            |
|               |                             BytesProcessedExec                                                                                                                                                                                                                                                         |
|               |                               EmptyExec                                                                                                                                                                                                                                                                |
|               |                                                                                                                                                                                                                                                                                                        |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
